chore: Update orchestration client (#24)
* update orch client

* fix tests
