# packages/gen-ai-hub/src/orchestration/api/schema/templating-module-config.ts
@@ -4,16 +4,18 @@
  * This is a generated file powered by the SAP Cloud SDK for JavaScript.
  */
 
+import { ChatMessages } from './chat-messages.js';
+
 /**
  * Representation of the 'TemplatingModuleConfig' schema.
  */
 export type TemplatingModuleConfig = {
   /**
-   * A string to be formatted with values from input_params. The role `user` will be assigned to the message. If messages_history is provided, the templated message will be appended.
-   * @example "{{ ?user_message }}\n{{ ?context }}"
-   * Max Length: 130000.
+   * A chat message array to be formatted with values from input_params. Both role and content can be templated. If messages_history is provided, the templated messages will be appended.
+   * @example {\n "role": "user",\n "content": "input text: {{ ?inputExample }}"\n }
    */
-  template: string;
+  template: ChatMessages;
+
   /**
    * Optional default values for the template. If a parameter has no default it is required.
    * @example "{\"context\": \"I am a default context\"}"
