# packages/gen-ai-hub/src/orchestration/api/schema/templating-module-result.ts
@@ -1,0 +1,10 @@
+/*
+ * Copyright (c) 2024 SAP SE or an SAP affiliate company. All rights reserved.
+ *
+ * This is a generated file powered by the SAP Cloud SDK for JavaScript.
+ */
+import type { ChatMessages } from './chat-messages.js';
+/**
+ * Representation of the 'TemplatingModuleResult' schema.
+ */
+export type TemplatingModuleResult = ChatMessages;
